
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int pwbuff ;


 int alphas ;
 int exit (int) ;
 char* numerics ;
 int palm_rand (unsigned int) ;
 int sprintf (char*,char*,char*,int ) ;
 int strlen (char*) ;

char *possible_password (unsigned int seed, int size)
{
  static char pwbuff[1024];
  char z[1024];
  int i, r;
  int valids;

  if (size > sizeof (pwbuff))
    exit (1);

  sprintf (z, "%s%s",numerics, alphas);
  valids = strlen (z);

  r = palm_rand (seed);

  for (i = 0; i < size; i++)
  {
    r = palm_rand (0);
    pwbuff[i] = z[r % valids];
  }
  pwbuff[i] = '\0';

  return pwbuff;
}
